feat: add access point entity
  - the new entity acces point is used to define console,portal,gateway access entrypoint
  - the old domain restriction on env and orga have been replaced by it
  - New resources /env/<id>/restrictedDomains has been added